# pc-mlra

./: .env.example  .gitignore  .sheet_id  LICENSE  README.md  app.py  apply_test_fixes.py  cleanup.sh  direct_connection_test.py  extensive_test_final.py  fix_metadata.py  get_render_credentials.sh  integrate_complete_imc.py  pyproject.toml  render.yaml  requirements.txt  run.py  setup.py  setup.sh  simple_flask.py  start_pc_mlra.sh  test_connection.py  test_console.py  test_endpoints.py  test_logger_fixed.py  test_sheets.py  test_sheets_connection.py  test_simple.py  test_simple_logger.py  test_system.py  test_system_complete.py  test_web.py  test_with_scopes.py  verify_sharing.py
app/: __init__.py
app/routes/: api.py  web.py
app/services/: demo_service.py  google_sheets_service.py  pc_mlra_service.py
app/templates/: chat.html  index.html
config/: environments.py  google_sheets_config.py  google_sheets_config_template.py  settings.py
docs/: CLAUSES_EXTRACTED.md
experiments/: extensive_test_suite.py  test_correct_architecture.py
requirements/: base.txt  development.txt  production.txt
research/: integration_summary.json
scripts/: create_render_env.py  verify_render_setup.sh
src/: intent_classifier.py  knowledge_loader.py  main.py  response_assembler.py  template_engine.py
templates/: chat.html  index.html
tests/: test_integrated_system.py  test_intent_classifier.py  test_knowledge_base.py  test_templates.py
tests_metrices/: run_all_metrics.py
utils/: goofle_sheets_logger.py  google_sheets_logger.py  simple_sheets_logger.py
(+25 files in other folders)
