[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pc-mlra"
version = "1.0.0"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "gunicorn==21.2.0",
    "gspread==5.11.2",
    "google-auth==2.23.3",
    "google-auth-oauthlib==1.2.0",
    "oauth2client==4.1.3",
]
